# atlasMind-Lite

./: .gitignore  README.md  app.py  atlasmind.py  jira_field_api.py  jira_field_embeddings.py  jql_embeddings.py  main.py  models.py  ollama_client.py  pyproject.toml  server.py  settings.py
.claude/: settings.json
cloud/: oci_vault.py
config/: chart_spec_prompt.md  frontend_contract.md  jira_config.py  profiles.json  router_prompt.md  router_prompt_ollama.md  system_prompt.md
core/: atlasmind.py  bedrock_claude_client.py  chart_spec_generator.py  claude_client.py  client_events.py  field_resolver.py  groq_client.py  jira_auth.py  jql_sanitizer.py  models.py  ollama_client.py  router.py  vllm_client.py
data/: jira_jql_annotated_queries.md
jira/: jira_compute.py  jira_field_api.py  jira_search.py
rag/: jira_field_embeddings.py  jira_field_value_embeddings.py  jql_embeddings.py  seed_manager.py
tests/: conftest.py  test_component.py  test_field_resolver.py  test_frontend_contract.py  test_jql_embeddings.py  test_jql_sanitizer.py  test_router.py
