[project]
name = "amind-partial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "oci>=2.0.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pyfiglet>=1.0.4",
    "rich>=14.3.3",
    "uvicorn>=0.44.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
